[package]
name = "hmac"
version = "0.3.1"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "Generic implementation of Hash-based Message Authentication Code (HMAC)"
documentation = "https://docs.rs/hmac"
repository = "https://github.com/RustCrypto/utils"
keywords = ["crypto", "mac", "hmac", "digest"]

[dependencies]
crypto-mac = "0.4"
generic-array = "0.8"
digest = "0.6"

[dev-dependencies]
crypto-tests = "0.5"
md-5 = "0.5"
sha2 = "0.6"